# opentelemetry-instrumentation-streaq

./: .gitignore  README.md  pyproject.toml
src/opentelemetry/instrumentation/streaq/: __init__.py  attributes.py  package.py  utils.py  version.py
tests/: conftest.py  streaq_test_tasks.py  test_attributes.py  test_instrumentor.py  test_integration.py  test_utils.py
