[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-streaq"
dynamic = ["version"]
description = "OpenTelemetry Streaq Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Afam-Ifediogor, U. Divine", email = "38317208+definite-d@users.noreply.github.com"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.62b0",
  "opentelemetry-semantic-conventions == 0.62b0",
]
[dependency-groups]
dev = [
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-test-utils>=0.62b0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "streaq>=6.4.0",
    "bumpver>=2024.1128",
]


[project.optional-dependencies]
instruments = [
  "streaq >= 6.4.0, < 7.0",
]

[project.entry-points.opentelemetry_instrumentor]
streaq = "opentelemetry.instrumentation.streaq:StreaqInstrumentor"

[project.urls]
Homepage = "https://github.com/definite-d/opentelemetry-instrumentation-streaq"
Repository = "https://github.com/definite-d/opentelemetry-instrumentation-streaq"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/streaq/version.py"

[tool.bumpver]
current_version = "0.0.1.dev0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
